--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       --accent-light: rgba(0, 255, 157, 0.15);
       --schedule: rgba(255, 255, 255, 0.5);
       --error: #ff6b6b;
-      
+
       /* Modern typography */
       --fs-xs: clamp(10px, 1.6vw, 12px);
       --fs-sm: clamp(11px, 1.8vw, 13px);
@@ -27,11 +27,7 @@
       --fs-xl: clamp(14px, 2.4vw, 16px);
     }
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     html, body {
       height: 100%;
@@ -48,7 +44,7 @@
       height: 100vh;
     }
 
-    /* MAIN: side-by-side layout - no borders */
+    /* MAIN: side-by-side layout */
     .row {
       flex: 1 1 auto;
       min-height: 0;
@@ -57,7 +53,6 @@
       overflow: hidden;
     }
 
-    /* Left: stops panel - no border */
     .stops {
       flex: 0 0 50%;
       min-width: 0;
@@ -105,10 +100,7 @@
       min-height: 0;
     }
 
-    /* Custom scrollbar */
-    .stops-inner::-webkit-scrollbar {
-      width: 6px;
-    }
+    .stops-inner::-webkit-scrollbar { width: 6px; }
     .stops-inner::-webkit-scrollbar-track {
       background: rgba(255, 255, 255, 0.05);
       border-radius: 3px;
@@ -118,7 +110,6 @@
       border-radius: 3px;
     }
 
-    /* Stop card */
     .stop-card {
       background: linear-gradient(135deg, rgba(25, 25, 40, 0.9), rgba(15, 15, 30, 0.95));
       border-radius: 16px;
@@ -131,9 +122,7 @@
     .stop-card::before {
       content: '';
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
+      top: 0; left: 0; right: 0;
       height: 1px;
       background: linear-gradient(90deg, transparent, rgba(0, 255, 157, 0.4), transparent);
     }
@@ -198,12 +187,7 @@
       white-space: nowrap;
     }
 
-    /* Bus arrivals - 3 buses per station */
-    .arrivals {
-      display: flex;
-      flex-direction: column;
-      gap: 1.2vh;
-    }
+    .arrivals { display: flex; flex-direction: column; gap: 1.2vh; }
 
     .bus-row {
       background: rgba(255, 255, 255, 0.05);
@@ -303,7 +287,7 @@
       opacity: 0.7;
     }
 
-    /* Right: static map */
+    /* Right: map */
     .mapWrap {
       flex: 1 1 auto;
       min-width: 0;
@@ -313,24 +297,30 @@
       overflow: hidden;
     }
 
-    /* NEW: 3 tiles container (replaces single <img>) */
+    /* TRUE TILE GRID: 3x3 placed in pixels, not stretched */
     #staticMapTiles {
       position: absolute;
       inset: 0;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: row;
-      gap: 0;
       overflow: hidden;
       background: #0f0f14;
     }
 
+    #staticMapTiles .tileGrid {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: calc(3 * 512px);
+      height: calc(3 * 512px);
+      /* חשוב: grid LTR כדי ש-x יעלה שמאלה->ימינה כמו מפה */
+      direction: ltr;
+    }
+
     #staticMapTiles img {
-      flex: 1 1 0;
-      width: 0;       /* חשוב כדי ש-flex יחלק שווה */
-      height: 100%;
-      object-fit: cover; /* ימלא כל שליש בלי עיוות יחס (עם חיתוך) */
+      position: absolute;
+      width: 512px;   /* @2x => 512px */
+      height: 512px;
+      image-rendering: auto;
       display: block;
     }
 
@@ -391,24 +381,12 @@
       transform: scale(1.05);
     }
 
-    .refresh-btn svg {
-      width: 18px;
-      height: 18px;
-      color: var(--text);
-      opacity: 0.9;
-    }
+    .refresh-btn svg { width: 18px; height: 18px; color: var(--text); opacity: 0.9; }
 
-    .spin {
-      animation: spin 0.9s linear infinite;
-      transform-origin: 50% 50%;
-    }
+    .spin { animation: spin 0.9s linear infinite; transform-origin: 50% 50%; }
 
-    @keyframes spin {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(360deg); }
-    }
+    @keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 
-    /* Loading overlay */
     .loading {
       position: absolute;
       inset: 0;
@@ -421,12 +399,7 @@
       backdrop-filter: blur(20px);
     }
 
-    .loading-content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1.2vh;
-    }
+    .loading-content { display: flex; flex-direction: column; align-items: center; gap: 1.2vh; }
 
     .loading-spinner {
       width: 40px;
@@ -461,7 +434,6 @@
       line-height: 1.4;
     }
 
-    /* Responsive adjustments */
     @media (max-height: 360px) {
       .row { padding: 0; }
       .stops-inner { padding: 1.2vh 1.6vw; gap: 1.4vh; }
@@ -483,8 +455,7 @@
     </div>
 
     <div class="mapWrap">
-      <!-- 3 tiles -->
-      <div id="staticMapTiles" aria-label="מפה (3 אריחים)"></div>
+      <div id="staticMapTiles" aria-label="מפה (3x3 אריחים)"></div>
 
       <div class="mapHUD">
         <div class="update-time" id="updateTime">--:--</div>
@@ -511,25 +482,23 @@
 (() => {
   'use strict';
 
-  // CONFIG
   const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzvwr0C5riL27J4gp7iczj_p1HW58hrSrYP1V8h4BDxcpVYN7HZ620BfViT2sx9ZjeG/exec";
   const FALLBACK_CENTER = [31.78, 35.22];
 
-  // Thunderforest (3 tiles)
+  // Thunderforest
   const THUNDERFOREST_API_KEY = "51ca0dea3d55481daa19863d7bef3344";
-  const THUNDERFOREST_STYLE = "transport"; // transport / cycle / etc.
+  const THUNDERFOREST_STYLE = "transport";
 
-  // Kept from original (zoom still used)
-  const MAP_WIDTH = 800;
-  const MAP_HEIGHT = 600;
+  // IMPORTANT: zoom used for tiles
   const MAP_ZOOM = 16;
 
-  // Timeout for Google Script (12 seconds as requested)
+  // Tile pixel size (because we use @2x)
+  const TILE_PX = 512;
+
   const FETCH_TIMEOUT = 12000;
   const MAX_STATIONS = 2;
-  const MAX_BUSES_PER_STATION = 3; // 3 buses per station
+  const MAX_BUSES_PER_STATION = 3;
 
-  // DOM Elements
   const $ = (id) => document.getElementById(id);
   const updateTimeEl = $('updateTime');
   const staticMapTilesEl = $('staticMapTiles');
@@ -538,14 +507,10 @@
   const loadingEl = $('loading');
   const errorMessageEl = $('errorMessage');
   const refreshBtn = $('refreshBtn');
-  const mainRow = $('mainRow');
 
-  // Global variables
-  let currentData = null;
   let refreshTimeout = null;
   let currentLocation = null;
 
-  // Utility functions
   function escapeHtml(text) {
     const div = document.createElement('div');
     div.textContent = text;
@@ -575,7 +540,6 @@
     });
   }
 
-  // Fetch with timeout
   async function fetchWithTimeout(url, options = {}) {
     const controller = new AbortController();
     const timeoutId = setTimeout(() => controller.abort(), FETCH_TIMEOUT);
@@ -599,63 +563,37 @@
     }
   }
 
-  // Get user location
   async function getUserLocation() {
     return new Promise((resolve) => {
       if (!navigator.geolocation) {
-        resolve({
-          lat: FALLBACK_CENTER[0],
-          lon: FALLBACK_CENTER[1],
-          isFallback: true
-        });
+        resolve({ lat: FALLBACK_CENTER[0], lon: FALLBACK_CENTER[1], isFallback: true });
         return;
       }
 
       navigator.geolocation.getCurrentPosition(
-        (position) => resolve({
-          lat: position.coords.latitude,
-          lon: position.coords.longitude,
-          isFallback: false
-        }),
-        () => resolve({
-          lat: FALLBACK_CENTER[0],
-          lon: FALLBACK_CENTER[1],
-          isFallback: true
-        }),
-        {
-          enableHighAccuracy: false,
-          timeout: 5000,
-          maximumAge: 30000
-        }
+        (position) => resolve({ lat: position.coords.latitude, lon: position.coords.longitude, isFallback: false }),
+        () => resolve({ lat: FALLBACK_CENTER[0], lon: FALLBACK_CENTER[1], isFallback: true }),
+        { enableHighAccuracy: false, timeout: 5000, maximumAge: 30000 }
       );
     });
   }
 
-  // Fetch data from Google Script
   async function fetchBusData(lat, lon) {
     try {
       const url = `${GOOGLE_SCRIPT_URL}?lat=${encodeURIComponent(lat)}&lon=${encodeURIComponent(lon)}`;
       const data = await fetchWithTimeout(url);
-
-      if (data.error) {
-        throw new Error(data.error);
-      }
-
+      if (data.error) throw new Error(data.error);
       return data;
     } catch (error) {
-      if (error.name === 'AbortError') {
-        throw new Error('הבקשה ארכה יותר מדי זמן. נסה שוב.');
-      }
+      if (error.name === 'AbortError') throw new Error('הבקשה ארכה יותר מדי זמן. נסה שוב.');
       throw error;
     }
   }
 
-  // Process bus times from rtVals and schVals
   function processBusTimes(busData) {
     const times = [];
     const now = new Date();
 
-    // Add realtime times (green)
     if (Array.isArray(busData.rtVals) && busData.rtVals.length > 0) {
       busData.rtVals.forEach(timeStr => {
         if (!timeStr || timeStr === '0' || timeStr === '-1') return;
@@ -672,17 +610,10 @@
           date = new Date(now.getTime() + minutes * 60000);
         }
 
-        if (date > now) {
-          times.push({
-            time: date,
-            isRealtime: true,
-            display: formatTime(date)
-          });
-        }
+        if (date > now) times.push({ time: date, isRealtime: true, display: formatTime(date) });
       });
     }
 
-    // Add schedule times (gray)
     if (Array.isArray(busData.schVals) && busData.schVals.length > 0) {
       busData.schVals.forEach(timeStr => {
         if (!timeStr) return;
@@ -699,22 +630,15 @@
           date = new Date(now.getTime() + minutes * 60000);
         }
 
-        if (date > now) {
-          times.push({
-            time: date,
-            isRealtime: false,
-            display: formatTime(date)
-          });
-        }
+        if (date > now) times.push({ time: date, isRealtime: false, display: formatTime(date) });
       });
     }
 
-    // Sort by time and limit to 4
     times.sort((a, b) => a.time - b.time);
     return times.slice(0, 4);
   }
 
-  // ---------- MAP (Thunderforest 3 tiles: x-1, x, x+1) ----------
+  // ---- TRUE TILE MAP (3x3) ----
   function latLonToTileXY(lat, lon, z) {
     const latRad = lat * Math.PI / 180;
     const n = Math.pow(2, z);
@@ -729,22 +653,34 @@
 
   function updateStaticMap(userLocation) {
     const z = MAP_ZOOM;
-    const { x, y } = latLonToTileXY(userLocation.lat, userLocation.lon, z);
+    const { x: cx, y: cy } = latLonToTileXY(userLocation.lat, userLocation.lon, z);
 
-    // 3 tiles: left, center, right
-    const urls = [
-      buildThunderforestTileUrl(z, x - 1, y),
-      buildThunderforestTileUrl(z, x, y),
-      buildThunderforestTileUrl(z, x + 1, y),
-    ];
+    // container
+    staticMapTilesEl.innerHTML = `<div class="tileGrid"></div>`;
+    const grid = staticMapTilesEl.querySelector('.tileGrid');
 
-    staticMapTilesEl.innerHTML = urls
-      .map(u => `<img src="${u}" alt="" loading="eager" />`)
-      .join('');
+    // place 3x3 tiles so they CONNECT correctly.
+    // dx: -1..1 (x changes left/right), dy: -1..1 (y changes up/down)
+    for (let dy = -1; dy <= 1; dy++) {
+      for (let dx = -1; dx <= 1; dx++) {
+        const tx = cx + dx;
+        const ty = cy + dy;
+
+        const img = document.createElement('img');
+        img.src = buildThunderforestTileUrl(z, tx, ty);
+        img.alt = '';
+
+        // position in pixels in the grid
+        // top-left of grid is (-1,-1)
+        img.style.left = ((dx + 1) * TILE_PX) + 'px';
+        img.style.top  = ((dy + 1) * TILE_PX) + 'px';
+
+        grid.appendChild(img);
+      }
+    }
   }
-  // -------------------------------------------------------------
+  // -----------------------------
 
-  // Render stops and buses
   function renderStops(data) {
     if (!data?.stations) return;
 
@@ -764,9 +700,8 @@
         ? buses.map(bus => {
             const times = processBusTimes(bus);
             const timesHtml = times.length > 0
-              ? times.map(t =>
-                  `<span class="${t.isRealtime ? 'time-real' : 'time-schedule'}">${t.display}</span>`
-                ).join('<span class="time-separator"> • </span>')
+              ? times.map(t => `<span class="${t.isRealtime ? 'time-real' : 'time-schedule'}">${t.display}</span>`)
+                     .join('<span class="time-separator"> • </span>')
               : '<span class="no-times">אין זמנים זמינים</span>';
 
             return `
@@ -807,13 +742,10 @@
     stopsInner.innerHTML = html || '<div class="no-arrivals">לא נמצאו תחנות קרובות</div>';
   }
 
-  // Update time display with current time
   function updateTimeDisplay() {
-    const now = getCurrentTimeString();
-    updateTimeEl.textContent = `עודכן ${now}`;
+    updateTimeEl.textContent = `עודכן ${getCurrentTimeString()}`;
   }
 
-  // Show/hide loading
   function setLoading(show, message = '') {
     loadingEl.style.display = show ? 'grid' : 'none';
     if (message) {
@@ -824,7 +756,6 @@
     }
   }
 
-  // Main load function
   async function loadAllData() {
     setLoading(true);
     refreshBtn.querySelector('svg').classList.add('spin');
@@ -834,62 +765,41 @@
       currentLocation = userLocation;
 
       const busData = await fetchBusData(userLocation.lat, userLocation.lon);
-      currentData = busData;
 
       updateTimeDisplay();
-
-      if (busData.stations) {
-        renderStops(busData);
-        updateStaticMap(userLocation);
-      } else {
-        stopsInner.innerHTML = '<div class="no-arrivals">לא נמצאו תחנות קרובות</div>';
-        stopsCountEl.textContent = '0 תחנות';
-        updateStaticMap(userLocation);
-      }
+      renderStops(busData);
+      updateStaticMap(userLocation);
 
       if (refreshTimeout) clearTimeout(refreshTimeout);
-      refreshTimeout = setTimeout(() => {
-        loadAllData();
-      }, 30000);
+      refreshTimeout = setTimeout(() => loadAllData(), 30000);
 
     } catch (error) {
       console.error('Error loading data:', error);
       errorMessageEl.textContent = `שגיאה: ${error.message}`;
       errorMessageEl.style.display = 'block';
 
-      if (currentLocation) {
-        updateStaticMap(currentLocation);
-      }
+      if (currentLocation) updateStaticMap(currentLocation);
     } finally {
       setLoading(false);
       refreshBtn.querySelector('svg').classList.remove('spin');
     }
   }
 
-  // Manual refresh
   window.__manualRefresh = async () => {
-    if (refreshTimeout) {
-      clearTimeout(refreshTimeout);
-      refreshTimeout = null;
-    }
+    if (refreshTimeout) { clearTimeout(refreshTimeout); refreshTimeout = null; }
     await loadAllData();
   };
 
-  // Initialize on load
   window.addEventListener('DOMContentLoaded', async () => {
     await loadAllData();
-
     window.__WIDGET_READY = true;
     if (typeof window.__wweb2WaitMillisecondsToWidgetIsReady === 'function') {
       window.__wweb2WaitMillisecondsToWidgetIsReady = () => 0;
     }
   });
 
-  // Cleanup on unload
   window.addEventListener('beforeunload', () => {
-    if (refreshTimeout) {
-      clearTimeout(refreshTimeout);
-    }
+    if (refreshTimeout) clearTimeout(refreshTimeout);
   });
 
 })();
